--- a/essay.html
+++ b/essay.html
@@ -6,7 +6,7 @@
 <title> Saul Bass</title>
   
     <!--linking css file to page--> 
-<link href='css/essay.css' type='text/css'
+<link href="css/essay.css" type='text/css'
           rel='stylesheet'/>
     
     <!link to google fonts*>
