--- a/essay.html
+++ b/essay.html
@@ -145,13 +145,13 @@ Horak, J. (2014). Saul Bass. University Press of Kentucky.
    
         <ul class="connections">
         <li><a href="mailto:wilson-k42@ulster.ac.uk"><img
-      src="img/social/email.svg" alt="Check out my other website" width="40em" height="40em" /></a></li>
+      src="images-essay/email.jpg" alt="Check out my other website" width="40em" height="40em" /></a></li>
         <li><a href= "http://katewilson_art/"><img
-     src="img/social/twitter.svg" alt= "Follow me on Twitter" width="40em" height="40em" />
+     src="images-essay/twitter-2.jpg" alt= "Follow me on Twitter" width="40em" height="40em" />
             </a></li>
             <li>
               <a href="https://https://www.tumblr.com/blog/katewilsonixd">
-                <img src="img/social/tumblr.svg" alt= "Check out my Tumblr" width="40em" height="40em" />
+                <img src="images-essay/tumblr.jpg" alt= "Check out my Tumblr" width="40em" height="40em" />
               </a>
             </li>
         </ul>
